--- a/theme.toml
+++ b/theme.toml
@@ -1,21 +1,21 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Custom"
+name = "github-maverick"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
+licenselink = "https://github.com/y0ug/hugo-theme-github-maverick/blob/master/LICENSE"
 description = ""
-homepage = "http://example.com/"
+homepage = ""
 tags = []
 features = []
 min_version = "0.41.0"
 
 [author]
-  name = ""
+  name = "Hugo Caron"
   homepage = ""
 
 # If porting an existing theme
 [original]
-  name = ""
+  name = "Maverick"
   homepage = ""
-  repo = ""
+  repo = "https://github.com/canhtran/maverick/"
